criação do layout das telas de usuário e componentes de tipos de evento

--- a/jt-eventos/src/app/nav-bar/nav-bar.component.html
+++ b/jt-eventos/src/app/nav-bar/nav-bar.component.html
@@ -25,23 +25,23 @@
         </li>
         <li [ngbNavItem]="1" class="nav-item">
           <a ngbNavLink class="nav-link text-light">Clientes</a>
-          <ng-template ngbNavContent>
+          <!-- <ng-template ngbNavContent>
             <p>
-              <!-- Raw denim you probably haven't heard of them jean shorts Austin.
+              Raw denim you probably haven't heard of them jean shorts Austin.
                   Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache
                   cliche tempor, williamsburg carles vegan helvetica. Reprehenderit
                   butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi,
                   qui irure terry richardson ex squid. Aliquip placeat salvia cillum
                   iphone. Seitan aliquip quis cardigan american apparel, butcher
-                  voluptate nisi qui. -->
+                  voluptate nisi qui.
             </p>
-          </ng-template>
+          </ng-template> -->
         </li>
         <li [ngbNavItem]="2" class="nav-item">
           <a ngbNavLink class="nav-link text-light">Eventos</a>
-          <ng-template ngbNavContent>
+          <!-- <ng-template ngbNavContent>
             <p>
-              <!-- Exercitation +1 labore velit, blog sartorial PBR leggings next level
+              Exercitation +1 labore velit, blog sartorial PBR leggings next level
                   wes anderson artisan four loko farm-to-table craft beer twee. Qui
                   photo booth letterpress, commodo enim craft beer mlkshk aliquip jean
                   shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda
@@ -50,17 +50,14 @@
                   cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY
                   ethical culpa terry richardson biodiesel. Art party scenester
                   stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed
-                  echo park. -->
+                  echo park.
             </p>
-          </ng-template>
+          </ng-template> -->
         </li>
-        <!-- <li ngbNavItem [disabled]="true" class="ms-auto">
-            <a ngbNavLink class="text-light">Bem-vindo, username</a>
-        </li> -->
       </ul>
     </div>
 
-    <div class="ms-auto text-light spacer">Bem-vindo, {{ username }}</div>
+    <div class="ms-auto text-light spacer">Bem-vindo, {{ name }} ({{ username }})</div>
   </div>
 </nav>
 
