--- a/jt-eventos/src/app/bars/nav-bar/nav-bar.component.css
+++ b/jt-eventos/src/app/bars/nav-bar/nav-bar.component.css
@@ -10,7 +10,7 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #1976d2;
+  background-color: #96bfe8;
   color: white;
   font-weight: 600;
 }
