--- a/jt-eventos/src/app/event-types/event-types-details/event-types-details.component.html
+++ b/jt-eventos/src/app/event-types/event-types-details/event-types-details.component.html
@@ -1,1 +1,30 @@
-<p>event-types-details works!</p>
+<div class="btn-toolbar" role="toolbar">
+    <div class="btn-group me-2" role="group">
+        <a class="btn btn-outline-dark a-dark">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z" />
+            </svg>
+        </a>
+    </div>
+
+    <div class="btn-group me-2" role="group">
+        <a asp-route-id="@Model?.Id" class="btn btn-outline-dark a-dark">
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-pencil" viewBox="0 0 16 16">
+                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z" />
+            </svg>
+        </a>
+    </div>
+
+    <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
+</div>
+
+<hr />
+
+<div class="row">
+    <div class="col-md-5 g-1 mx-auto">
+        <div class="form-group">
+            <strong><label class="control-label">Descrição</label></strong>
+            <label readonly class="form-control"></label>
+        </div>
+    </div>
+</div>
