--- a/jt-eventos/src/app/users/users-table/users-table.component.html
+++ b/jt-eventos/src/app/users/users-table/users-table.component.html
@@ -1,6 +1,6 @@
 <div class="btn-toolbar" role="toolbar">
     <div class="btn-group me-2" role="group">
-        <a class="btn btn-outline-success a-create">
+        <a class="btn btn-outline-success a-success">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
             </svg>
