criação dos modais de alerta e ajustes pontuais no layout

--- a/jt-eventos/src/app/events/events-details/events-details.component.html
+++ b/jt-eventos/src/app/events/events-details/events-details.component.html
@@ -16,20 +16,20 @@
     </div>
 
     <div class="btn-group me-2" role="group">
-        <a data-bs-toggle="modal" data-bs-target="#exampleModal" asp-action="Delete" asp-route-id="@Model?.Id" class="btn btn-outline-danger a-danger">
+        <button class="btn btn-outline-danger a-danger" (click)="openDelete()">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
             </svg>
-        </a>
+        </button>
     </div>
 
     <div class="btn-group me-2" role="group">
-        <a class="btn btn-outline-dark a-dark" onclick="window.open('../Report/@Model?.Id', 'janela', 'width=660, height=510, top=100, left=699, scrollbars=yes, status=no, toolbar=no, location=no, menubar=no, resizable=no, fullscreen=no')">
+        <button class="btn btn-outline-dark a-dark" (click)="printReport()">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-printer" viewBox="0 0 16 16">
                 <path d="M2.5 8a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z" />
                 <path d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
             </svg>
-        </a>
+        </button>
     </div>
 
     <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
@@ -67,29 +67,6 @@
         <div class="form-group">
             <strong><label class="control-label">Lista de convidados</label></strong>
             <textarea readonly class="form-control" rows="3" disabled></textarea>
-        </div>
-    </div>
-</div>
-
-<!-- Modal de exclusão -->
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Deseja excluir este evento?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Esta ação não pode ser desfeita.
-            </div>
-            <div class="modal-footer">
-                <form asp-action="Delete">
-                    <input type="hidden" asp-for="Id" />
-                    <a asp-action="Details" class="btn btn-outline-dark" data-bs-dismiss="modal">Voltar</a>
-                    <button type="submit" class="btn btn-outline-danger">Excluir evento</button>
-                </form>
-            </div>
         </div>
     </div>
 </div>
