--- a/jt-eventos/src/app/nav-bar/nav-bar.component.html
+++ b/jt-eventos/src/app/nav-bar/nav-bar.component.html
@@ -7,7 +7,7 @@
     <div>
       <ul ngbNav #nav="ngbNav" class="navbar-nav flex-grow-1 justify-content-center">
         <li ngbDropdown class="nav-item dropdown">
-          <a href (click)="(false)" class="text-dark nav-link" ngbDropdownToggle>Administração</a>
+          <a href (click)="(false)" class="nav-link" ngbDropdownToggle>Administração</a>
           <div ngbDropdownMenu>
             <button ngbDropdownItem>Estabelecimentos</button>
             <button ngbDropdownItem>Tipos de Evento</button>
@@ -23,7 +23,7 @@
           </div>
         </li>
         <li [ngbNavItem]="1" class="nav-item">
-          <a ngbNavLink class="nav-link text-dark">Clientes</a>
+          <a ngbNavLink class="nav-link">Clientes</a>
           <!-- <ng-template ngbNavContent>
             <p>
               Raw denim you probably haven't heard of them jean shorts Austin.
@@ -37,7 +37,7 @@
           </ng-template> -->
         </li>
         <li [ngbNavItem]="2" class="nav-item">
-          <a ngbNavLink class="nav-link text-dark">Eventos</a>
+          <a ngbNavLink class="nav-link">Eventos</a>
           <!-- <ng-template ngbNavContent>
             <p>
               Exercitation +1 labore velit, blog sartorial PBR leggings next level
