--- a/jt-eventos/src/app/customers/customers-details/customers-details.component.html
+++ b/jt-eventos/src/app/customers/customers-details/customers-details.component.html
@@ -16,11 +16,11 @@
     </div>
 
     <div class="btn-group me-2" role="group">
-        <a data-bs-toggle="modal" data-bs-target="#exampleModal" class="btn btn-outline-danger a-danger">
+        <button class="btn btn-outline-danger a-danger" (click)="openDelete()">
             <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
                 <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z" />
             </svg>
-        </a>
+        </button>
     </div>
 
     <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
@@ -61,30 +61,6 @@
         <div class="form-group">
             <strong><label class="control-label">Endereço</label></strong>
             <textarea readonly class="form-control" rows="3" disabled></textarea>
-        </div>
-    </div>
-</div>
-
-<!-- Modal de exclusão -->
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Deseja excluir este cliente?</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                Recomendamos <strong>inativar</strong> o registro, para manter suas informações na base dados.
-            </div>
-            <div class="modal-footer">
-                <form asp-action="Delete">
-                    <input type="hidden" asp-for="Id" />
-                    <a asp-action="Details" class="btn btn-outline-dark" data-bs-dismiss="modal">Voltar</a>
-                    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-outline-primary">Inativar</a>
-                    <button type="submit" class="btn btn-outline-danger" onclick="invalidDate();" data-bs-dismiss="modal">Excluir cliente</button>
-                </form>
-            </div>
         </div>
     </div>
 </div>
