--- a/jt-eventos/src/app/nav-bar/nav-bar.component.css
+++ b/jt-eventos/src/app/nav-bar/nav-bar.component.css
@@ -11,10 +11,18 @@
   display: flex;
   align-items: center;
   background-color: #96bfe8;
-  color: white;
+  color: #fff;
   font-weight: 600;
 }
 
 .toolbar img {
   margin: 0 16px;
+}
+
+.nav-link, .nav-link:visited {
+  color: #1e2124;
+}
+
+.nav-link:hover {
+  color: #fff;
 }
