ajustes pontuais de layout

--- a/jt-eventos/src/app/authentication/authentication.component.html
+++ b/jt-eventos/src/app/authentication/authentication.component.html
@@ -1,1 +1,25 @@
-<p>authentication works!</p>
+<div class="row">
+    <form>
+        <div class="col-md-2 mx-auto">
+            <img src="../../assets/jt-eventos.png" alt="JT Eventos Logo" width="200px">
+
+            <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
+        </div>
+
+        <br><br><br>
+
+        <div class="col-md-3 row g-1 mx-auto">
+            <hr>
+            <div class="mb-3">
+                <label for="Username" class="form-label">Usuário</label>
+                <input type="text" class="form-control" id="Username">
+                </div>
+                <div class="mb-3">
+                <label for="Password" class="form-label">Senha</label>
+                <input type="password" class="form-control" id="Password">
+                </div> 
+
+            <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </form>
+</div>
