--- a/jt-eventos/src/app/footer/footer.component.css
+++ b/jt-eventos/src/app/footer/footer.component.css
@@ -1,11 +1,8 @@
-footer {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
-}
-
-footer a {
-  display: flex;
-  align-items: center;
+div {
+    background-color: #fffffff2;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
