--- a/jt-eventos/src/app/footer/footer.component.html
+++ b/jt-eventos/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="border-top text-muted">
+<div class="border-top text-muted fixed-bottom">
   &copy; 2022 - JT Eventos&nbsp;
 
   <a href="https://www.linkedin.com/in/jonas-pohlmann-araujo/">
