--- a/jt-eventos/src/app/nav-bar/nav-bar.component.css
+++ b/jt-eventos/src/app/nav-bar/nav-bar.component.css
@@ -10,7 +10,7 @@
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #96bfe8;
+  background-color: #96bfe8f5;
   color: #fff;
   font-weight: 600;
 }
