--- a/jt-eventos/src/app/nav-bar/nav-bar.component.html
+++ b/jt-eventos/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
+<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow fixed-top">
   <div class="toolbar" role="banner">
     <img width="80" alt="JT Eventos Logo" src="../../assets/jt-eventos.png" />
     
