--- a/jt-eventos/src/app/users/users-details/users-details.component.html
+++ b/jt-eventos/src/app/users/users-details/users-details.component.html
@@ -22,16 +22,14 @@
 
 <div class="row">
     <div class="col-md-5 g-1 mx-auto">
+        <span class="badge rounded-pill text-bg-info">Administrador</span>
+        
         <div class="form-group">
             <strong><label class="control-label">Nome</label></strong>
             <label readonly class="form-control"></label>
         </div>
         <div class="form-group">
             <strong><label class="control-label">Usuário</label></strong>
-            <label readonly class="form-control"></label>
-        </div>
-        <div class="form-group">
-            <strong><label class="control-label">Tipo de usuário</label></strong>
             <label readonly class="form-control"></label>
         </div>
     </div>
