--- a/jt-eventos/src/app/establishments/establishments-table/establishments-table.component.html
+++ b/jt-eventos/src/app/establishments/establishments-table/establishments-table.component.html
@@ -1,10 +1,11 @@
 <div class="btn-toolbar" role="toolbar">
     <div class="btn-group me-2" role="group">
-        <a class="btn btn-outline-success a-success">
-            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
-            </svg>
-        </a>
+        <button class="btn btn-outline-primary" (click)="createEstablishment()">
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+				<path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z"/>
+			</svg>&nbsp;
+			Cadastrar
+        </button>
     </div>
 
     <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
@@ -34,7 +35,7 @@
 			<td><ngb-highlight [result]="establishment.description" [term]="filter.value"></ngb-highlight></td>
 			<td><ngb-highlight [result]="establishment.street + ', ' + establishment.streetNumber + ', ' + establishment.streetComplement + ', ' + establishment.neighborhood + ' - ' + establishment.city + '/' + establishment.state + ', CEP: ' + establishment.cep" [term]="filter.value"></ngb-highlight></td>
 			<td>
-				<a href="#" class="a-table">
+				<a href="#" class="a-table" (click)="detailEstablishment()">
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
 						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 					</svg>
