ajustes da impressão dos detalhes do evento

--- a/jt-eventos/src/app/app.component.html
+++ b/jt-eventos/src/app/app.component.html
@@ -3,5 +3,5 @@
   <p>JT Eventos é um sistema com foco em criação e gerenciamento de eventos.</p>
   <p>Selecione um dos menus acima para realizar os cadastros.</p>
 
-  <img src="../assets/jt-eventos.png" width="500" alt="Logo JT Eventos">
+  <img src="../assets/jt-eventos.png" width="500" alt="Logo JT Eventos" />
 </div>
