--- a/jt-eventos/src/app/components/events/events-details/events-details.component.html
+++ b/jt-eventos/src/app/components/events/events-details/events-details.component.html
@@ -15,7 +15,7 @@
             </div>
             <div class="form-group">
                 <strong><label class="control-label">Estabelecimento:&nbsp;</label></strong>
-                <label>Salão Gostas de Prata</label>
+                <label>Salão Gotas de Prata</label>
             </div>
             <div class="form-group">
                 <strong><label class="control-label">Descrição:&nbsp;</label></strong>
@@ -203,17 +203,15 @@
         <li>Thiago</li>
         <li>Roberto</li>
         <li>Bruna</li>
+        <li>Salem</li>
+        <li>Lorena</li>
       </ul>
     </div>
   </div>
 
   <div class="row no-gutters">
     <div class="col">
-      <p class="disclaimer signature-field">
-        &copy; 2022 - JT Eventos&nbsp;
-        Jonas Pohlmann Araujo,&nbsp;
-        Thiago Martins Proença
-      </p>
+      <p class="disclaimer signature-field">&copy; 2022 - JT Eventos</p>
     </div>
   </div>
 </div>
