criação das rotas, criação do componente de home, ajustes pontuais nas implementações existentes

--- a/jt-eventos/src/app/components/modals/cancel-modal/cancel-modal.component.html
+++ b/jt-eventos/src/app/components/modals/cancel-modal/cancel-modal.component.html
@@ -6,5 +6,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.dismiss('Close click')">Voltar</button>
-  <button type="button" class="btn btn-outline-primary" (click)="activeModal.close('Ok click')">Cancelar cadastro</button>
+  <button type="button" class="btn btn-outline-primary" (click)="cancel(true)">Cancelar cadastro</button>
 </div>
