--- a/jt-eventos/src/app/components/modals/delete-modal/delete-modal.component.html
+++ b/jt-eventos/src/app/components/modals/delete-modal/delete-modal.component.html
@@ -7,5 +7,5 @@
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-outline-dark" (click)="activeModal.dismiss('Close click')">Voltar</button>
-  <button type="button" class="btn btn-outline-danger" (click)="activeModal.close('Ok click')">Excluir {{ description }}</button>
+  <button type="button" class="btn btn-outline-danger" (click)="delete(true)">Excluir {{ description }}</button>
 </div>
