--- a/jt-eventos/src/app/components/nav-bar/nav-bar.component.html
+++ b/jt-eventos/src/app/components/nav-bar/nav-bar.component.html
@@ -1,19 +1,21 @@
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow fixed-top">
   <div class="toolbar" role="banner">
-    <img width="80" alt="JT Eventos Logo" src="../../assets/jt-eventos.png" />
-    
+    <a routerLink="/">
+      <img width="80" alt="JT Eventos Logo" src="../../assets/jt-eventos.png" />
+    </a>
+
     <div class="spacer"></div>
-    
+
     <div>
       <ul ngbNav #nav="ngbNav" class="navbar-nav flex-grow-1 justify-content-center">
         <li ngbDropdown class="nav-item dropdown">
           <a href (click)="(false)" class="nav-link" ngbDropdownToggle>Administração</a>
           <div ngbDropdownMenu>
-            <button ngbDropdownItem>Estabelecimentos</button>
-            <button ngbDropdownItem>Tipos de Evento</button>
-            <button ngbDropdownItem>Usuários</button>
+            <button ngbDropdownItem routerLink="/establishments">Estabelecimentos</button>
+            <button ngbDropdownItem routerLink="/event-types">Tipos de Evento</button>
+            <button ngbDropdownItem routerLink="/users">Usuários</button>
             <div class="dropdown-divider"></div>
-            <button ngbDropdownItem>
+            <button ngbDropdownItem (click)="login()">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-power" viewBox="0 0 16 16">
                 <path d="M7.5 1v7h1V1h-1z" />
                 <path d="M3 8.812a4.999 4.999 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812z" />
@@ -23,35 +25,10 @@
           </div>
         </li>
         <li [ngbNavItem]="1" class="nav-item">
-          <a ngbNavLink class="nav-link">Clientes</a>
-          <!-- <ng-template ngbNavContent>
-            <p>
-              Raw denim you probably haven't heard of them jean shorts Austin.
-                  Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache
-                  cliche tempor, williamsburg carles vegan helvetica. Reprehenderit
-                  butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi,
-                  qui irure terry richardson ex squid. Aliquip placeat salvia cillum
-                  iphone. Seitan aliquip quis cardigan american apparel, butcher
-                  voluptate nisi qui.
-            </p>
-          </ng-template> -->
+          <a ngbNavLink class="nav-link" routerLink="/customers">Clientes</a>
         </li>
         <li [ngbNavItem]="2" class="nav-item">
-          <a ngbNavLink class="nav-link">Eventos</a>
-          <!-- <ng-template ngbNavContent>
-            <p>
-              Exercitation +1 labore velit, blog sartorial PBR leggings next level
-                  wes anderson artisan four loko farm-to-table craft beer twee. Qui
-                  photo booth letterpress, commodo enim craft beer mlkshk aliquip jean
-                  shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda
-                  labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia
-                  yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio
-                  cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY
-                  ethical culpa terry richardson biodiesel. Art party scenester
-                  stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed
-                  echo park.
-            </p>
-          </ng-template> -->
+          <a ngbNavLink class="nav-link" routerLink="/events">Eventos</a>
         </li>
       </ul>
     </div>
