--- a/jt-eventos/src/app/components/users/users-table/users-table.component.html
+++ b/jt-eventos/src/app/components/users/users-table/users-table.component.html
@@ -6,11 +6,7 @@
 			</svg>&nbsp;
 			Cadastrar
         </button>
-    </div>
-
-	<button class="btn btn-outline-dark" (click)="login()">
-		Login
-	</button>
+      </div>
 
     <h1 class="position-absolute start-50 translate-middle-x">{{ title }}</h1>
 </div>
@@ -41,7 +37,7 @@
 			<td><ngb-highlight [result]="user.username" [term]="filter.value"></ngb-highlight></td>
 			<td><ngb-highlight [result]="user.role" [term]="filter.value"></ngb-highlight></td>
 			<td>
-				<a href="#" class="a-table" (click)="detailUser()">
+				<a class="a-table" (click)="detailUser()">
 					<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
 						<path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
 					</svg>
