criação do componente de toast messages e criação da integração com a API da Via CEP

--- a/jt-eventos/src/app/app.component.html
+++ b/jt-eventos/src/app/app.component.html
@@ -5,6 +5,7 @@
 <main>
     <div class="content container" role="main">
       <router-outlet></router-outlet>
+      <app-toast-global aria-live="polite" aria-atomic="true"></app-toast-global>
     </div>
 </main>
 
