--- a/jt-eventos/src/app/components/home/home.component.html
+++ b/jt-eventos/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home">
-  <h1>Seja bem-vindo à {{ title }}</h1>
+  <h1>Seja bem-vindo à JT Eventos!</h1>
   <p>JT Eventos é um sistema com foco em criação e gerenciamento de eventos.</p>
   <p>Selecione um dos menus acima para realizar os cadastros.</p>
 
