--- a/jt-eventos/src/app/components/modals/cancel-modal/cancel-modal.component.html
+++ b/jt-eventos/src/app/components/modals/cancel-modal/cancel-modal.component.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
   <h5 class="modal-title">Deseja cancelar este cadastro?</h5>
+  <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
 <div class="modal-body">
   Este cadastro não será salvo e você perderá as informações preenchidas.
