--- a/jt-eventos/src/app/components/modals/delete-modal/delete-modal.component.html
+++ b/jt-eventos/src/app/components/modals/delete-modal/delete-modal.component.html
@@ -1,5 +1,6 @@
 <div class="modal-header">
   <h5 class="modal-title">Deseja excluir este {{ description }}?</h5>
+  <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
 </div>
 <div class="modal-body">
   Todas informações associadas a este registro serão permanentemente removidas.
