criação do componente do modal de logout, ajuste dos serviços e ajustes pontuais no layout

--- a/jt-eventos/src/app/components/establishments/establishments-form/establishments-form.component.html
+++ b/jt-eventos/src/app/components/establishments/establishments-form/establishments-form.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="form-group">
           <strong><label for="Cep" class="control-label">CEP</label></strong>
-          <input id="Cep" #Cep class="form-control" (blur)="searchCep()" required />
+          <input id="Cep" #Cep class="form-control" (blur)="viaCep.searchCep()" required />
         </div>
         <div class="form-group">
           <strong><label for="Street" class="control-label">Logradouro</label></strong>
