--- a/jt-eventos/src/app/app.component.html
+++ b/jt-eventos/src/app/app.component.html
@@ -5,7 +5,7 @@
 <main>
     <div class="content container" role="main">
       <router-outlet></router-outlet>
-      <app-toast-global aria-live="polite" aria-atomic="true"></app-toast-global>
+      <app-toasts aria-live="polite" aria-atomic="true"></app-toasts>
     </div>
 </main>
 
