--- a/jt-eventos/src/app/components/authentication/authentication.component.html
+++ b/jt-eventos/src/app/components/authentication/authentication.component.html
@@ -28,5 +28,5 @@
   </div>
 </div>
 <div class="modal-footer">
-  <button type="submit" class="btn btn-primary" (click)="activeModal.close('Ok click')">Login</button>
+  <button type="submit" class="btn btn-primary" (click)="login()">Login</button>
 </div>
